Always clean contextualActions when they are deleted

Applet on close disconnects from all its contextualActions
but they are QML owned, so they can be deleted anytime
it did not clean when the applet was in destroyed mode,
causing a potential crash if the contextual action
itself was deleted while applet is in destroyed mode

BUG:504793


(cherry picked from commit 092e52c2518f28226c60a39e4187b658fa809f79)

092e52c2 Always clean contextualActions when they are deleted

Co-authored-by: Marco Martin <notmart@gmail.com>